2007-09-22  Richard Stallman  <rms@gnu.org>

	* wid-edit.el (widget-specify-button): Don't merge mouse-face with
	neighbouring buttons.

2007-09-22  Andreas Schwab  <schwab@suse.de>

	* files.el (file-name-sans-versions): Also allow `_'.

2007-09-22  Glenn Morris  <rgm@gnu.org>

	* eshell/esh-mode.el (eshell-output-filter-functions): Add
        eshell-postoutput-scroll-to-bottom.

2007-09-21  Dan Nicolaescu  <dann@ics.uci.edu>

	* files.el (file-name-sans-versions): Allow - and a-z in version
	names.

	* log-view.el (log-view-mode-map, log-view-mode-menu): Bind
	log-view-annotate-version.
	(log-view-beginning-of-defun, log-view-end-of-defun)
	(log-view-annotate-version): New functions.
	(log-view-mode): Use log-view-beginning-of-defun and
	log-view-end-of-defun.

2007-09-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/easy-mmode.el (define-minor-mode): Fix staging brain damage.

2007-09-21  Kevin Ryde  <user42@zip.com.au>

	* international/mule.el (sgml-html-meta-auto-coding-function):
	Bind `case-fold-search' to t.

2007-09-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* wid-edit.el (widget-image-insert): Don't merge mouse-face with
	neighbouring buttons.

	* progmodes/compile.el (compilation-error-regexp-alist-alist):
	Recognize gcc's use of "note" for informational messages.

2007-09-20  Glenn Morris  <rgm@gnu.org>

	* textmodes/tex-mode.el (tex-validate-buffer): Use paragraph
	motion functions, rather than hard-coding "\n\n".
	(tex-validate-region): Check for eobp, to speed up.
	(tex-next-unmatched-end): Doc fix.

2007-09-19  Glenn Morris  <rgm@gnu.org>

	* textmodes/tex-mode.el (tex-terminate-paragraph):
	Use backward-paragraph.

2007-09-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* textmodes/css-mode.el (css-electric-keys): electrick->electric.
	(css-mode): Update correspondingly.

2007-09-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-arch.el (vc-arch-extra-menu-map): New var and fun.

	* vc-hooks.el (vc-menu-entry): New var.